--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
     width: 100%;
     height: 200px;
     display: flex;
+
 }
 #small_cont {
     display: flex;
@@ -13,4 +14,7 @@
     background-color: red;
     width: 500px;
     height: 50px;
+    margin-top: 30px;
+    margin-left: 500px;
+
 }
