--- a/styles.css
+++ b/styles.css
@@ -36,19 +36,20 @@
     /* margin-left: 20px;
     margin-top: 40px; */
     width: 20%;
-    height: 60px;
-    margin: 10px;
+    height: 40px;
+    margin: 50px;
     background-color: blanchedalmond;
-    flex: 1;
+    flex: 0.7;
 
 }
 #left4{
     /* /* margin-left: 20px;
     margin-top: 40px; */
     width: 20%;
-    height: 60px; 
-    margin: 10px;
+    height: 55px; 
+    margin: 40px;
+    margin-right: 50px;
     background-color: blanchedalmond;
-    flex: 1;
+    flex: 0.8;
 
 }
