--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,7 @@
     width: 20%;
     height: 40px;
     margin: 50px;
+    margin-top: 40px;
     background-color: blanchedalmond;
     flex: 0.7;
 
@@ -49,6 +50,7 @@
     height: 55px; 
     margin: 40px;
     margin-right: 50px;
+    margin-top: 60px;
     background-color: blanchedalmond;
     flex: 0.8;
 
