--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 #header {
-    background-color: gray;
+    background-color: rgb(228, 228, 228);
     width: 100%;
     height: 200px;
     display: flex;
@@ -11,7 +11,7 @@
 }
 
 #small-box {
-    background-color: red;
+    background-color: rgb(252, 239, 205);
     width: 500px;
     height: 50px;
     margin-top: 30px;
